Add analytics tracking and menu intelligence APIs